# melex-rodao

./: .abstruse.yml  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
components/: CMakeLists.txt
components/carlaBridge/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  carlaBridge.cdsl  cmake_install.cmake
components/carlaBridge/etc/: cameras.yml  config
components/carlaBridge/src/: AdminBridge.ice  BuildingCameraRGBD.ice  CMakeLists.txt  CameraManager.py  CarCameraRGBD.ice  CarlaSensors.ice  CarlaVehicleControl.ice  GNSS.py  IMU.py  Logger.py  Makefile  SaveResults.py  adminbridgeI.py  carlaBridge.py  carlamanager.py  carlavehiclecontrolI.py  cmake_install.cmake  genericworker.py  interfaces.py  specificworker.py
components/carlaBridge/test/: cameramanager_test.py  carlamanager_test.py  context.py  gnss_test.py  imu_test.py  logger_test.py  monitor.py  runtest.py
components/carlaMonitor/: CMakeLists.txt  DoxyFile  README.md  carlaMonitor.cdsl  plotPath.py
components/carlaMonitor/etc/: config
components/carlaMonitor/src/: CMakeLists.txt  DualControl.py  HUD.py  Logger.py  SaveResults.py  SensorManager.py  buildingcamerargbdI.py  carlaMonitor.py  genericworker.py  mainUI.ui  specificworker.py
components/carlaRemoteControl/: CMakeLists.txt  README.md  carlaRemoteControl.cdsl
components/carlaRemoteControl/etc/: config
components/carlaRemoteControl/src/: CMakeLists.txt  CameraManager.py  DualControl.py  GNSS.py  HUD.py  Hud.py  SaveResults.py  SensorManager.py  camerargbdsimplepubI.py  carcamerargbdI.py  carlaRemoteControl.py  carlaWorld.py  carlasensorsI.py  genericworker.py  specificworker.py
components/carlaSecondBridge/: CMakeLists.txt  README.md  carlaSecondBridge.cdsl
components/carlaSecondBridge/src/: CMakeLists.txt  CameraManager.py  carlaSecondBridge.py  genericworker.py  specificworker.py
components/carlaSensorsBridge/: CMakeLists.txt  README.md  carlaSensorsBridge.cdsl  requirements.txt
components/carlaSensorsBridge/src/: CMakeLists.txt  CameraManager.py  Collision.py  DualControl.py  GNSS.py  Hud.py  IMU.py  carlaSensorsBridge.py  carlaWorld.py  carlavehiclecontrolI.py  genericworker.py  (+1 more)
components/carlaVisualization/: CMakeLists.txt  README.md  carlaVisualization.cdsl
components/melexLogger/: CMakeLists.txt  README.md  melexLogger.cdsl
(+61 files in other folders)
